--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ requires-python = ">=3.13"
 dependencies = [
     "basedpyright>=1.36.1",
     "fastapi>=0.124.4",
+    "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
     "ruff>=0.14.9",
+    "sqlalchemy>=2.0.45",
     "uvicorn>=0.38.0",
 ]
