feat: Cria a migrations usando o alembic e atualiza as configurações em settings.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
-    "basedpyright>=1.36.1",
+    "alembic>=1.17.2",
     "fastapi>=0.124.4",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
